# centauri6dof

./: .gitmodules  README.md
centauri6dof/: CMakeLists.txt  package.xml  urdf.rviz
centauri6dof/config/: joint_names_centauri6dof.yaml
centauri6dof/launch/: display.launch  gazebo.launch
centauri6dof/meshes/: base_link.STL  gear1.STL  gear2.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  pinza1.STL  pinza2.STL  pivot1.STL  pivot2.STL
centauri6dof/urdf/: centauri6dof.urdf
centauri6dof_moveit/: CMakeLists.txt  package.xml
centauri6dof_moveit/centauri_moveit_arduino/: centauri_moveit_arduino.ino
centauri6dof_moveit/centauri_moveit_arduino/MultiStepperTest/: MultiStepperTest.ino
centauri6dof_moveit/centauri_moveit_arduino/arduino_centauri6dof/: arduino_centauri6dof.ino
centauri6dof_moveit/centauri_moveit_arduino/arduino_centauri_p/: arduino_centauri_p.ino
centauri6dof_moveit/msg/: ArmJointState.msg
centauri6dof_moveit/src/: move_group_interface_coor_1.cpp  moveit_convert.cpp
centauri6dof_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
centauri6dof_moveit_config/config/: centauri6dof.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
centauri6dof_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
learning_tf/: CMakeLists.txt  package.xml
learning_tf/launch/: start_demo.launch
learning_tf/nodes/: turtle_tf_broadcaster.py
rqt_centauri6dof/: CMakeLists.txt  Plugin.xml  package.xml
rqt_mypkg/: CMakeLists.txt  package.xml  plugin.xml  setup.py
(+7 files in other folders)
